--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -92,6 +92,17 @@
 
 }
 
+/* Nav Below */
+
+#nav-below {
+    // margin-top: 30px;
+}
+
+/* Nav Prev / Next  */
+.nav-previous {
+    float: left;
+    margin-right: 20px;
+}
 
 /* Buttons */
 
