--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -22,6 +22,10 @@
 .width-100 {
     width: 100%;
 }
+%img-full{
+    width: 100%;
+    height: auto;
+}
 
 @mixin center-vertically($h1, $h2) {
     position: fixed;
