--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -91,7 +91,7 @@ a{
     }
 }
 p {
-    padding:        15px 0;
+    // padding:        15px 0;
     color:          #aaa;
     font-family:    "Dosis", sans-serif;
     font-size:      16px;
