--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -6,6 +6,12 @@
 .no-pad {
 	padding: 0;
 }
+.no-pad-left {
+    padding-left: 0 !important;
+}
+.no-pad-right {
+    padding-right: 0 !important;
+}
 .no-border, .no-border tbody > tr > td {
     border: 0;
     border-top: 0;
