--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -163,6 +163,12 @@ time, mark, audio, video {
     }
 }
 
+.entry-content {
+    img {
+        margin: 10px 0 30px;
+    }
+}
+
 .media, .description{
     margin-bottom: 30px;
 }
