--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -334,14 +334,22 @@ article {
   margin-top: 20px;
   background-color: black;
 }
+/* line 135, ../scss/_overrides.scss */
+.sidebar h3 {
+  padding: 5px 0;
+}
+/* line 138, ../scss/_overrides.scss */
+.sidebar .nav > li > a {
+  padding: 10px 0;
+}
 
-/* line 136, ../scss/_overrides.scss */
+/* line 143, ../scss/_overrides.scss */
 .row-thumbnails {
   margin-left: -15px;
   margin-right: -15px;
 }
 
-/* line 140, ../scss/_overrides.scss */
+/* line 147, ../scss/_overrides.scss */
 .thumbnail {
   min-height: 285px;
   padding: 0;
@@ -352,20 +360,20 @@ article {
   transition: all, 0s;
 }
 @media only all and (min-width: 768px) and (max-width: 991px) {
-  /* line 140, ../scss/_overrides.scss */
+  /* line 147, ../scss/_overrides.scss */
   .thumbnail {
     min-height: 250px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 140, ../scss/_overrides.scss */
+  /* line 147, ../scss/_overrides.scss */
   .thumbnail {
     width: 100%;
     clear: both;
     min-height: 0;
   }
 }
-/* line 159, ../scss/_overrides.scss */
+/* line 166, ../scss/_overrides.scss */
 .thumbnail h3 {
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
@@ -376,27 +384,27 @@ article {
   -o-transition: padding, 0.5s;
   transition: padding, 0.5s;
 }
-/* line 163, ../scss/_overrides.scss */
+/* line 170, ../scss/_overrides.scss */
 .thumbnail img {
   height: auto !important;
 }
 @media only all and (max-width: 767px) {
-  /* line 163, ../scss/_overrides.scss */
+  /* line 170, ../scss/_overrides.scss */
   .thumbnail img {
     width: 100% !important;
   }
 }
-/* line 171, ../scss/_overrides.scss */
+/* line 178, ../scss/_overrides.scss */
 .thumbnail .thumb-content {
   background-color: black;
 }
-/* line 175, ../scss/_overrides.scss */
+/* line 182, ../scss/_overrides.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 188, ../scss/_overrides.scss */
+  /* line 195, ../scss/_overrides.scss */
   .thumbnail:hover h3 {
     background: #0074a2;
     padding-top: 20px;
