--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -131,6 +131,13 @@ article {
     padding: 20px;
     margin-top: 20px;
     background-color: black;
+
+    h3 {
+        padding: 5px 0;
+    }
+    .nav>li>a {
+        padding: 10px 0;
+    }
 }
 
 .row-thumbnails {
