--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -80,7 +80,9 @@ time, mark, audio, video {
         }   
     }
 }
-
+.kebo-tweets p {
+    line-height: 19px;
+}
 
 /* .main-content-inner {
     .wrap {
