--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -133,7 +133,8 @@ article {
     background-color: black;
 
     h3 {
-        padding: 5px 0;
+        padding: 0 0 15px;
+        margin: 0 !important;
     }
     .nav>li>a {
         padding: 10px 0;
